# localx

./: .gitignore  Cargo.toml  LICENSE  README.md  app.manifest  build.rs  resource.rc
src/: main.rs  tui.rs
src/app/: mod.rs
src/app/commands/: mod.rs
src/app/handlers/: flf_grub.rs  mod.rs  time_compile.rs
src/app/impls/: app.rs  mod.rs  states.rs
src/app/localization/: en.rs  mod.rs  ru.rs
src/app/net/: base.rs  info_packet.rs  mod.rs
src/app/widgets/: app.rs  cross_compile.rs  map.rs  mod.rs  net.rs  settings.rs  utils.rs
